# contents-delivery-manager

./: .gitignore  Makefile.am  README.md  configure.ac
.github/ISSUE_TEMPLATE/: issue-report.md
common/: delivery.c  delivery.h  result.h  types.h  utils.h
source/: manager.c
