# Makefile.am -- Process this file with automake to produce Makefile.in
bin_PROGRAMS = contents_delivery_manager

contents_delivery_manager_SOURCES = source/manager.c common/delivery.c common/delivery.h common/types.h common/utils.h

contents_delivery_manager_LDADD = @NET_LIBS@

EXTRA_DIST = autogen.sh
